// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex"
    >
      <div
        class="PicassoProgressBar-progressBar"
      >
        <div
          class="PicassoProgressBar-progressIndicator"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBar renders with percentage 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex"
    >
      <div
        class="PicassoProgressBar-progressBar"
      >
        <div
          class="PicassoProgressBar-progressIndicator"
          style="width: 50%;"
        />
      </div>
      <div
        class=""
        style="margin-left: 0.5rem;"
      >
        <p
          class="MuiTypography-root PicassoTypography-bodyXsmall PicassoTypography-semibold PicassoProgressBar-percentageValue MuiTypography-body1"
        >
          50
          %
        </p>
      </div>
    </div>
  </div>
</div>
`;
